--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SubstationAutomationApp"
+        android:theme="@style/Base.Theme.SubstationAutomationApp"
         tools:targetApi="31">
         <activity
-            android:name=".Logs"
+            android:name=".LogsActivity"
             android:exported="false" />
         <activity
-            android:name=".Setting"
+            android:name=".SettingsActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
